added styles, added loop and listed reigndeer

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<title>The Static Web Exercises, Colored Reindeer</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
 	<h1>The Static Web Exercises, Colored Reindeer</h1>
+
+
+		<div id="coloredReindeer"></div>
+
+	<!-- css animation -->
+	<div class='shiba'>
+	  <p class='blue'>SUCH SCSS</p>
+	  <p class='green'>wow so flat</p>
+	  <p class='yellow'>much modern</p>
+	  <p class='purple'>SO HAML</p>
+	  <div class='shiba-head'>
+	    <div class='shiba-head-face'></div>
+	    <div class='shiba-head-ears'>
+	      <div class='shiba-head-ear-shadows'></div>
+	    </div>
+	    <div class='shiba-head-eyes'>
+	      <div class='shiba-head-eyeballs'></div>
+	    </div>
+	    <div class='shiba-head-nose'></div>
+	    <div class='shiba-head-mouth'></div>
+	  </div>
+	</div>
+
+
+
+
 
 
 	<script type="text/javascript" src="reindeer.js"></script>
